style: added overflow none to stop scrolling

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -1,6 +1,8 @@
 html, body
     height: 100vh
     width: 100vw
+    margin: 0
+    overflow: hidden
 
     background: #000000 url(../images/background.jpg) no-repeat center center fixed
     -webkit-background-size: cover
